
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TriangleCalculations" >
      
      <TextView
        android:id="@+id/r"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_alignBaseline="@+id/enterR"
        android:layout_alignBottom="@+id/enterR"
        android:layout_toLeftOf="@+id/enterH"
        android:gravity="center"
        android:text="@string/r"
        android:textSize="15sp" />
	      
      <EditText
	        android:id="@+id/enterR"
	        android:layout_width="140dp"
	        android:layout_height="25dp"
	        android:layout_marginTop="12dp"
	        android:layout_toRightOf="@+id/r"
	        android:gravity="center"
	        android:hint="@string/enterR" 
	        android:textSize="12sp" />
	      
       <TextView
	        android:id="@+id/h"
	        android:layout_width="100dp"
	        android:layout_height="20dp"
	        android:layout_marginLeft="35dp"
	        android:layout_marginTop="14dp"
	        android:gravity="center"
	        android:layout_below="@+id/r"
	        android:text="@string/h"
	        android:textSize="15sp" />
       
       <EditText
	        android:id="@+id/enterH"
	        android:layout_width="140dp"
	        android:layout_height="25dp"
	        android:layout_marginTop="12dp"
	        android:layout_toRightOf="@+id/h"
	        android:gravity="center"
	        android:layout_below="@+id/enterR"
	        android:hint="@string/enterH" 
	        android:textSize="12sp" />
        
         <TextView
	        android:id="@+id/l"
	        android:layout_width="100dp"
	        android:layout_height="20dp"
	        android:layout_marginLeft="35dp"
	        android:layout_marginTop="14dp"
	        android:gravity="center"
	        android:layout_below="@+id/h"
	        android:text="@string/l"
	        android:textSize="15sp" />
         
         <EditText
	        android:id="@+id/enterL"
	        android:layout_width="140dp"
	        android:layout_height="25dp"
	        android:layout_marginTop="12dp"
	        android:layout_toRightOf="@+id/l"
	        android:gravity="center"
	        android:layout_below="@+id/enterH"
	        android:hint="@string/enterL" 
	        android:textSize="12sp" />
         
          <TextView
	        android:id="@+id/volume"
	        android:layout_width="100dp"
	        android:layout_height="25dp"
	        android:layout_marginLeft="35dp"
	        android:layout_marginTop="10dp"
	        android:gravity="center"
	        android:layout_below="@+id/l"
	        android:text="@string/volum"
	        android:textSize="15sp" />
     
     
     <TextView
        android:id="@+id/volumeValue"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_below="@+id/enterL"
        android:layout_toRightOf="@+id/volume"
        android:textSize="13sp" />
     
    <TextView
        android:id="@+id/carea"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_below="@+id/volume"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/carea"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/careaValue"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_below="@+id/volumeValue"
        android:layout_toRightOf="@+id/carea"
        android:textSize="13sp" />
   
    <TextView
        android:id="@+id/tarea"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/carea"
        android:layout_toLeftOf="@+id/enterL"
        android:gravity="center"
        android:text="@string/tarea"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tareaValue"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_below="@+id/careaValue"
        android:layout_toRightOf="@+id/tarea"
        android:textSize="13sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tarea"
        android:gravity="center"
        android:text="@string/calculate"
        android:textSize="12sp" />
         
</RelativeLayout>
</ScrollView>