<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/radius"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/radius"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/enterRadius"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/radius"
        android:gravity="center"
        android:hint="@string/enterRadius" 
        android:textSize="12sp" />

     <TextView
        android:id="@+id/spvolume"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:layout_below="@+id/radius"
        android:text="@string/sphvol"
        android:textSize="15sp" />
     
     
     <TextView
        android:id="@+id/volValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_below="@+id/enterRadius"
        android:layout_toRightOf="@+id/spvolume"
        android:textSize="15sp" />
     
    <TextView
        android:id="@+id/sparea"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:layout_below="@+id/spvolume"
        android:text="@string/sparea"
        android:textSize="15sp" />
    
   <TextView
        android:id="@+id/spareaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_below="@+id/volValue"
        android:layout_toRightOf="@+id/sparea"
        android:textSize="15sp" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:gravity="center"
        android:text="@string/calculate"
        android:layout_below="@+id/sparea" />
    
</RelativeLayout>
</ScrollView>