<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/radius"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/radius"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/enterRadius"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/radius"
        android:gravity="center"
        android:hint="@string/enterRadius" 
        android:textSize="12sp" />

     <TextView
        android:id="@+id/perimeter"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:layout_below="@+id/radius"
        android:text="@string/circumference"
        android:textSize="15sp" />
     
     
     <TextView
        android:id="@+id/perimeterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_below="@+id/enterRadius"
        android:layout_toRightOf="@+id/perimeter"
        android:textSize="15sp" />
     
    <TextView
        android:id="@+id/area"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:layout_below="@+id/perimeter"
        android:text="@string/area"
        android:textSize="15sp" />
    
   <TextView
        android:id="@+id/areaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_below="@+id/perimeterValue"
        android:layout_toRightOf="@+id/area"
        android:textSize="15sp" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_below="@+id/area"
        android:gravity="center"
        android:text="@string/calculate" />
    
</RelativeLayout>
</ScrollView>