<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConeFormula" >

    <TextView
        android:id="@+id/cnvolume"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:text="@string/conevolume" />

        <TextView
            android:id="@+id/cncurved"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/cnvolume"
            android:layout_alignTop="@+id/cnvolume"
            android:layout_marginTop="33dp"
            android:text="@string/conecurved" />

        <TextView
            android:id="@+id/cntotal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/cncurved"
            android:layout_below="@+id/cnvolume"
            android:text="@string/conetotal" />

</RelativeLayout>
</ScrollView>